--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -94,6 +94,7 @@ body {
 }
 
 .main {
+    position: relative;
     width: 62%;
     height: 100%;
     margin: 5rem auto 0 auto;
@@ -365,15 +366,6 @@ aside .switch {
 }
 
 #lottery-wrap .sure-active {
-    /* border-top: 5px solid #CB141D;
-    border-bottom: 5px solid #CB141D;
-    -webkit-transition: all 1s;
-    -moz-transition: all 1s;
-    -ms-transition: all 1s;
-    -o-transition: all 1s;
-    transition: all 1s; */
-    /*padding: 2rem;*/
-
     background: linear-gradient(90deg, #fffbe6 0%, #ffe58f 100%);
     border: 3px solid #d9ad61;
     box-shadow: 0 0 16px 4px #ffe58f, 0 2px 8px #d9ad61;
@@ -424,16 +416,7 @@ aside .switch {
     -webkit-box-shadow: 0 2px rgba(0,0,0,0.1);
     -moz-box-shadow: 0 2px rgba(0,0,0,0.1);
     box-shadow: 0 2px rgba(0,0,0,0.1);
-    /*background: #FE351E;*/
     background: rgba(255,255,255,0.8);
-    /*border: 2px solid #FD361F;*/
-    /*border:15px solid transparent;*/
-    /*-moz-border-image:url(../images/china-border.png) 30 30 stretch;	!* Old Firefox *!*/
-    /*-webkit-border-image:url(../images/china-border.png) 30 30 stretch;	!* Safari and Chrome *!*/
-    /*-o-border-image:url(../images/china-border.png) 30 30 stretch;		!* Opera *!*/
-    /*border-image:url(../images/china-border.png) 30 30 stretch;*/
-    /*background: url("../images/border.png") no-repeat;*/
-    /*background-size: cover;*/
 }
 .lottery-content .beauty {
     position: absolute;
@@ -591,18 +574,6 @@ aside .switch {
     -moz-box-shadow: 0 5px rgba(253, 54, 31, 0.5);
     box-shadow: 0 5px rgba(253, 54, 31, 0.5);
 }
-/* .dashboard .cirle-btn:nth-child(1) {
-    left: 15%;
-}
-.dashboard .cirle-btn:nth-child(2) {
-    left: 22%;
-}
-.dashboard .cirle-btn:nth-child(4) {
-    right: 22%;
-}
-.dashboard .cirle-btn:nth-child(5) {
-    right: 15%;
-} */
 
 .cirle-btn.award {
     margin: 0 4px;
@@ -802,39 +773,6 @@ button.close {
     z-index: 1045;
 }
 
-/* .stop-main {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9;
-}
-.stop-main #stop-time {
-    position: absolute;
-    left: 45%;
-    top: 35%;
-    margin: 0 auto;
-    padding: 1rem;
-    text-align: center;
-    font-size: 20rem;
-    color: #FD361F;
-    font-family: 'STKaiti', 'KaiTi ';
-    border: 4px solid #FD361F;
-    border-radius: 100%;
-}
-.stop-main .back:after {
-    content: '';
-    width: 100%;
-}
-.stop-main .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.1);
-} */
-
 .fade-enter-active, .fade-leave-active {
     transition: opacity 0.5s;
 }
@@ -889,6 +827,16 @@ footer {
     background-size: contain;
 }
 
-
-
+.weight-edit-section {
+    margin: 1.5rem auto 0 auto;
+    cursor: pointer;
+    color: #FD361F;
+    border: 3px solid #FD361F;
+    -webkit-box-shadow: 0 6px rgba(253, 54, 31, 0.5);
+    -moz-box-shadow: 0 6px rgba(253, 54, 31, 0.5);
+    box-shadow: 0 6px rgba(253, 54, 31, 0.5);
+    font-size: 2rem;
+    font-weight: 600;
+    font-family: 'STKaiti', 'KaiTi ';
+}
 
