--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -840,3 +840,16 @@ footer {
     font-family: 'STKaiti', 'KaiTi ';
 }
 
+.global-spin {
+    position: fixed !important;
+    top: 0; left: 0; right: 0; bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(255,255,255,0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2000;
+    pointer-events: all;
+}
+
