--- a/src/styles/base/common.scss
+++ b/src/styles/base/common.scss
@@ -15,7 +15,7 @@
   width: 100%;
   height: var(--header-height);
   z-index: 2;
-  background: url("../../images/top_border.png") repeat-x;
+  background: url("../../assets/images/top_border.png") repeat-x;
 }
 
 /* 侧边栏样式 */
@@ -257,7 +257,7 @@ footer {
   width: 100%;
   height: 2rem;
   z-index: 3;
-  background: url("../../images/langhua.png") repeat-x;
+  background: url("../../assets/images/langhua.png") repeat-x;
   background-size: contain;
 }
 
@@ -269,7 +269,7 @@ footer {
   left: 0.5%;
   width: 3rem;
   height: 3rem;
-  background: url("../../images/music.png") 0 0 no-repeat;
+  background: url("../../assets/images/music.png") 0 0 no-repeat;
   background-size: contain;
 }
 
@@ -280,7 +280,7 @@ footer {
   right: 0.5%;
   width: 3rem;
   height: 3rem;
-  background: url("../../images/clear.png") 0 0 no-repeat;
+  background: url("../../assets/images/clear.png") 0 0 no-repeat;
   background-size: contain;
 }
 
