--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -120,7 +120,7 @@ html {
 
 body {
   height: 100%;
-  background: url("../../images/yunwen.jpg") repeat;
+  background: url("../../assets/images/yunwen.jpg") repeat;
   font-size: var(--font-size-base);
   line-height: 1;
   font-family: var(--font-family-primary);
