--- a/src/styles/components/lottery/lottery-main.scss
+++ b/src/styles/components/lottery/lottery-main.scss
@@ -166,28 +166,28 @@
     &.border-01 {
       top: 3px;
       left: 3px;
-      background: url("../../../images/border-01.png") no-repeat;
+      background: url("../../../assets/images/border-01.png") no-repeat;
       background-size: contain;
     }
 
     &.border-02 {
       top: 3px;
       right: 3px;
-      background: url("../../../images/border-02.png") no-repeat;
+      background: url("../../../assets/images/border-02.png") no-repeat;
       background-size: contain;
     }
 
     &.border-03 {
       bottom: 3px;
       left: 3px;
-      background: url("../../../images/border-03.png") no-repeat;
+      background: url("../../../assets/images/border-03.png") no-repeat;
       background-size: contain;
     }
 
     &.border-04 {
       bottom: 3px;
       right: 3px;
-      background: url("../../../images/border-04.png") no-repeat;
+      background: url("../../../assets/images/border-04.png") no-repeat;
       background-size: contain;
     }
   }
