--- a/src/styles/base/common.scss
+++ b/src/styles/base/common.scss
@@ -8,6 +8,11 @@
   margin: 5rem auto 0 auto;
 }
 
+.lottery-container {
+  width: 100%;
+  height: 100%;
+}
+
 .top-head {
   position: absolute;
   left: 0;
@@ -15,7 +20,30 @@
   width: 100%;
   height: var(--header-height);
   z-index: 2;
-  background: url("../../assets/images/top_border.png") repeat-x;
+  display: flex;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: url("../../assets/images/top_border.png") repeat-x;
+    background-size: auto 100%;
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: url("../../assets/images/top_border.png") repeat-x;
+    background-size: auto 100%;
+    transform: scaleX(-1); /* 水平翻转 */
+  }
 }
 
 /* 侧边栏样式 */
@@ -26,6 +54,7 @@ aside {
   height: 100%;
   z-index: 1;
   text-align: center;
+  overflow: hidden;
 
   &.aside-left {
     left: 0;
@@ -40,7 +69,13 @@ aside {
     height: 100%;
     background: var(--background-white);
     padding-top: 4rem;
-    box-shadow: var(--shadow-md);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    position: relative;
+    border-radius: 0 10px 10px 0; /* 右侧圆角 */
+  }
+
+  &.aside-right .aside-main {
+    border-radius: 10px 0 0 10px; /* 左侧圆角 */
   }
 
   img.switch {
@@ -77,7 +112,7 @@ aside {
 
   &.btn-red-outline {
     width: 35%;
-    margin: 1rem auto 0 auto;
+    margin: 2rem auto 0 auto;
     color: var(--primary-color);
     border: 3px solid var(--primary-color);
     box-shadow: 0 6px rgba(253, 54, 31, 0.5);
@@ -87,6 +122,9 @@ aside {
     background: linear-gradient(145deg, var(--background-white), var(--background-light));
     position: relative;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &:hover {
       transform: translateY(-2px);
