--- a/src/styles/components/lottery/lottery-buttons.scss
+++ b/src/styles/components/lottery/lottery-buttons.scss
@@ -2,7 +2,7 @@
 
 /* 仪表板容器 */
 .dashboard {
-  margin: 6rem auto 0 auto;
+  margin: 9rem auto 0 auto;
   text-align: center;
   display: flex;
   align-items: center;
@@ -12,30 +12,30 @@
   padding: 0 1rem;
 
   /* 第一个dashboard（奖项按钮）的特殊样式 */
-  &:first-of-type {
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-    justify-content: flex-start;
-    padding: 0 2rem;
-    gap: 8px;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    min-height: 80px;
+  // &:first-of-type {
+  //   flex-wrap: nowrap;
+  //   overflow-x: auto;
+  //   overflow-y: hidden;
+  //   justify-content: flex-start;
+  //   padding: 0 2rem;
+  //   gap: 8px;
+  //   scrollbar-width: none;
+  //   -ms-overflow-style: none;
+  //   min-height: 80px;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
+  //   &::-webkit-scrollbar {
+  //     display: none;
+  //   }
+  // }
 
   /* 第二个dashboard（奖项设置按钮）的特殊样式 */
-  &:nth-of-type(2) {
-    margin-top: 1.5rem;
-    gap: 8px;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
+  // &:nth-of-type(2) {
+  //   margin-top: 1.5rem;
+  //   gap: 8px;
+  //   flex-wrap: wrap;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
 
   /* 奖项按钮容器样式 */
   .award-buttons-container {
@@ -49,7 +49,9 @@
 
   /* 抽奖按钮样式 */
   .lottery-btn {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 12%;
     margin: 0 auto;
     cursor: pointer;
@@ -138,6 +140,10 @@
       line-height: 1.0;
     }
   }
+}
+
+.dashboard-setting {
+  margin: 4rem auto 0 auto;
 }
 
 /* 选中状态样式 */
@@ -294,6 +300,9 @@
     .lottery-btn {
       width: 15%;
       font-size: var(--font-size-lg);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
@@ -344,6 +353,9 @@
     .lottery-btn {
       width: 18%;
       font-size: var(--font-size-sm);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
