--- a/src/styles/components/lottery/lottery-main.scss
+++ b/src/styles/components/lottery/lottery-main.scss
@@ -12,7 +12,7 @@
 .wrap-border-main {
   position: absolute;
   width: 100%;
-  height: 65%;
+  height: 75%;
   z-index: -5;
   top: 2%;
 }
@@ -75,8 +75,8 @@
 /* 主容器 */
 .wrap-main {
   position: relative;
-  top: 2%;
-  height: 65%;
+  top: 4%;
+  height: 71%;
   overflow: hidden;
 
   .stop-time {
@@ -129,7 +129,7 @@
 .lottery-avatar {
   height: 80px;
   width: 80px;
-  margin-left: 8rem;
+  margin-left: 8.5rem;
   margin-top: 1.2rem;
   border-radius: 80px;
   overflow: hidden;
@@ -148,7 +148,7 @@
 .lottery-content {
   position: relative;
   margin-left: 3rem;
-  padding: 1.5rem;
+  padding: 2rem;
   width: 80.5%;
   height: 6rem;
   transition: all 0.4s;
@@ -215,18 +215,18 @@
   }
 
   .content-title {
-    margin: 0 0 10px;
+    margin: 0 0 0 5px;
     text-align: center;
 
     .lottery-name {
-      font-size: var(--font-size-xxl);
+      font-size: var(--font-size-xl);
       color: var(--secondary-color);
       font-weight: bold;
       font-family: var(--font-family-chinese);
     }
 
     .company {
-      font-size: var(--font-size-base);
+      font-size: var(--font-size-xs);
       font-weight: 500;
       color: var(--secondary-light);
       font-family: var(--font-family-primary);
