--- a/src/styles/utils/effects.scss
+++ b/src/styles/utils/effects.scss
@@ -40,17 +40,17 @@
       }
       
       .name {
-        line-height: 4rem;
+        line-height: 3rem;
         margin-left: 2rem;
         color: var(--secondary-color);
-        font-size: var(--font-size-xl);
+        font-size: var(--font-size-lg);
         font-family: var(--font-family-chinese);
       }
       
       .avatar {
         img {
-          width: 4rem;
-          height: 4rem;
+          width: 3rem;
+          height: 3rem;
           border-radius: 100%;
         }
       }
