--- a/src/styles/components/lottery/lottery-main.scss
+++ b/src/styles/components/lottery/lottery-main.scss
@@ -11,7 +11,8 @@
   .cloud-left {
     width: 60px;
     height: auto;
-    transform: scaleX(-1); /* 水平翻转 */
+    /* 水平翻转 */
+    transform: scaleX(-1);
     margin-right: 20px;
   }
 
@@ -48,8 +49,10 @@
   width: 100%;
   overflow-x: auto;
   overflow-y: hidden;
-  padding: 5px 0; /* 减少上下内边距 */
-  max-height: 80px; /* 限制最大高度 */
+  /* 减少上下内边距 */
+  padding: 5px 0;
+  /* 限制最大高度 */
+  max-height: 80px;
   
   /* 自定义滚动条样式 */
   &::-webkit-scrollbar {
@@ -177,7 +180,7 @@
 .wrap-border-main {
   position: absolute;
   width: 100%;
-  height: 70%;
+  height: calc(75% - 175px);
   z-index: -5;
   top: 2%;
 }
@@ -241,7 +244,7 @@
 .wrap-main {
   position: relative;
   top: 4%;
-  height: 66%;
+  height: calc(71% - 175px);
   overflow: hidden;
 
   .stop-time {
