--- a/src/styles/components/lottery/lottery-buttons.scss
+++ b/src/styles/components/lottery/lottery-buttons.scss
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 12%;
+    // width: 12%;
     margin: 0 auto;
     cursor: pointer;
     font-size: 2.2rem;
@@ -271,7 +271,7 @@
     }
 
     .lottery-btn {
-      width: 15%;
+      // width: 15%;
       font-size: var(--font-size-lg);
       display: flex;
       align-items: center;
@@ -324,7 +324,7 @@
     }
 
     .lottery-btn {
-      width: 18%;
+      // width: 18%;
       font-size: var(--font-size-sm);
       display: flex;
       align-items: center;
